# air_quality_index_weather_live

./: .dockerignore  .env.example  .flake8  .gitignore  Dockerfile  README.md  build.sh  ci-check.sh  pyproject.toml  pytest.ini  requirements.txt
.github/: CI_CD_SETUP.md
.github/workflows/: ci.yml  deploy.yml
backend/: README.md  main.py  test_api.py
docs/: overview.md
frontend/: README.md  index.html  package.json  vite.config.ts
frontend-react/: README.md  package-lock.json  vite.config.ts
frontend-react/src/: App.tsx  MapView.tsx  main.tsx
frontend/src/: App.tsx  MapView.tsx  main.css
tests/: test_main.py
