[project]
name = "air-quality-index-weather-live"
version = "0.1.0"
description = "Air Quality Index & Weather Live Dashboard"
authors = [
    {name = "Mohammadamin Albooyeh"}
]
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
]
readme = "README.md"
requires-python = ">=3.9"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "httpx>=0.24.0",
    "pytest-cov>=4.0.0",
    "flake8>=6.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
]

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9"
fastapi = "^0.100.0"
uvicorn = "^0.20.0"
requests = "^2.31.0"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
httpx = "^0.24.0"
pytest-cov = "^4.0.0"
flake8 = "^6.0.0"
black = "^23.0.0"
isort = "^5.12.0"
